Fix issue with double scroll bars in-browser

--- a/src/index.css
+++ b/src/index.css
@@ -32,9 +32,10 @@ h1, h2, h3, h4, h5, h6 {
 	height: 1px;
 }
 
-html {
+html, body {
 	width: 100%;
-	height: 100%;
+	height: 100vh;
+	overflow-y: hidden;
 }
 
 body {
@@ -43,8 +44,6 @@ body {
 	color: #FFFFFF;
 	font-family: 'Inter', sans-serif;
 	font-weight: 600;
-	width: 100%;
-	height: 100%;
 }
 
 * {
